WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259518
[Win][MiniBrowser] Download the file, if the MIMEType is not supported.
https://bugs.webkit.org/show_bug.cgi?id=259518
Summary
[Win][MiniBrowser] Download the file, if the MIMEType is not supported.
Kenji Shukuwa
Reported
2023-07-25 23:30:21 PDT
https://bugs.webkit.org/show_bug.cgi?id=234887#c0
> In addition, when I click a download link on a website, it does not download the file, > but just opens a page in the browser that displays the contents of the file.
This issue is ongoing. So change it to download the file.
Attachments
Add attachment
proposed patch, testcase, etc.
Kenji Shukuwa
Comment 1
2023-07-25 23:46:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16096
EWS
Comment 2
2023-07-26 12:10:36 PDT
Committed
266320@main
(feb7a3b937db): <
https://commits.webkit.org/266320@main
> Reviewed commits have been landed. Closing PR #16096 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-26 12:11:18 PDT
<
rdar://problem/112919065
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug