[Win][MiniBrowser] Download a file, if a MIME type is not supported. https://bugs.webkit.org/show_bug.cgi?id=259518

Reviewed by Fujii Hironori.

If you select content with an unsupported MIME type, the binary data of
that file will be displayed. Therefore, for such content, download the
file.

* Tools/MiniBrowser/win/WebKitBrowserWindow.cpp:
(WebKitBrowserWindow::decidePolicyForNavigationResponse):

Canonical link: https://commits.webkit.org/266320@main